# VerifBFL

./: README.md
aggproof/: Cargo.toml  README.md  compressedsnark.json
aggproof/src/: main.rs
bcfl-hh/: .gitignore  hardhat.config.js  package-lock.json  package.json
bcfl-hh/benchmark/: docker-compose.yml  report-onchain.html  workload.json
bcfl-hh/contracts/: AccessManagement.sol  Operator.sol  Task.sol  Token.sol  Verifier.sol
bcfl-hh/ignition/modules/: AccessManagement.js  Task.js  Token.js
bcfl-hh/test/: Task.js
trainingproof/: Cargo.toml  README.md  compressedsnark.json
trainingproof/inputs/images/: image_1.json  image_10.json  image_18.json  image_2.json  image_22.json  image_25.json  image_27.json  image_28.json  image_31.json  image_32.json  image_33.json  image_34.json  image_35.json  image_37.json  image_40.json  image_41.json  image_44.json  image_45.json  image_48.json  image_50.json  image_54.json  image_56.json  image_58.json  image_59.json  image_6.json  image_60.json  image_61.json  image_65.json  image_67.json  image_70.json  image_73.json  image_77.json  image_81.json  image_85.json  image_86.json  image_87.json  image_88.json  image_90.json  image_93.json  image_96.json  (+1 more)
trainingproof/inputs/weights/: layer1_w.json  layer2_b.json
trainingproof/src/: main.rs
verification-ea/: Cargo.toml  README.md
verification-ea/inputs/images/: image_0.json  image_14.json  image_19.json  image_20.json  image_21.json  image_23.json  image_24.json  image_26.json  image_29.json  image_3.json  image_30.json  image_4.json  (+40 more)
verification-ea/src/: main.rs
(+20 files in other folders)
