[package]
name = "trainingproof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellpepper-core = "0.4.0"
bincode = "1.3.3"
flate2 = "1.0.31"
nova-snark = "0.37.0"
pasta_curves = "0.5.1"
serde = { version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
